--- a/Cory_Doctorow_-_Makers.tex
+++ b/Cory_Doctorow_-_Makers.tex
@@ -40,29 +40,35 @@ copyright law is superseded by the thousands of farcical, abusive words
 in the license agreement you click through on the way to sealing the 
 deal. (Of course, the button on their website says, ``Buy this book'' and 
 they talk about ``Ebook sales'' at conferences---no one says, ``License this 
-book for your Kindle'' or ``Total licenses of ebooks are up from 0.00001% 
-of all publishing to 0.0001% of all publishing, a 100-fold increase!'')
+book for your Kindle'' or ``Total licenses of ebooks are up from 0.00001\% 
+of all publishing to 0.0001\% of all publishing, a 100-fold increase!'')
 
-I say to hell with them. You bought it, you own it. I believe in copyright law's guarantee of ownership in your books.
+I say to hell with them. You bought it, you own it. I believe in copyright
+law's guarantee of ownership in your books.
 
-So you own this ebook. The license agreement (see below), is from Creative Commons and it gives you even \emph{more} rights than you get to a regular book. Every word of it is a gift, not a confiscation. Enjoy.
+So you own this ebook. The license agreement (see below), is from Creative 
+Commons and it gives you even \emph{more} rights than you get to a
+regular book. Every word of it is a gift, not a confiscation. Enjoy.
 
 What do I want from you in return? Read the book. Tell your friends. 
 Review it on Amazon or at your local bookseller. Bring it to your 
 bookclub. Assign it to your students (older students, please---that sex 
 scene is a scorcher) (\emph{now} I've got your attention, don't I?). As Woody Guthrie wrote:
 
+\begin{quotation}
 ``This song is Copyrighted in U.S., under Seal of Copyright \#154085, for a
  period of 28 years, and anybody caught singin' it without our 
 permission, will be mighty good friends of ourn, cause we don't give a 
 dern. Publish it. Write it. Sing it. Swing to it. Yodel it. We wrote it,
  that's all we wanted to do.''
-</p>
-</a><p><a name="About">
-Oh yeah. Also: if you like it, </a><a href="http://craphound.com/makers/buy">buy it</a> or <a href="http://craphound.com/makers/donate">donate a copy</a> to a worthy, cash-strapped institution.
+\end{quotation}
+
+Oh yeah. Also: if you like it, buy it\footnote{\texttt{http://craphound.com/makers/buy}}
+or donate a copy\footnote{\texttt{http://craphound.com/makers/donate}}
+to a worthy, cash-strapped institution.
 
 Why am I doing this? Because my problem isn't piracy, it's obscurity 
-(thanks, @timoreilly for this awesome aphorism). Because free ebooks 
+(thanks, \texttt{@timoreilly} for this awesome aphorism). Because free ebooks 
 sell print books. Because I copied my ass off when I was 17 and grew up 
 to spend practically every discretionary cent I have on books when I 
 became an adult. Because I can't stop you from sharing it (zeroes and 
@@ -74,7 +80,8 @@ I have always dreamt of writing sf novels, since I was six years old.
 Now I do it. It is a goddamned dream come true, like growing up to be a 
 cowboy or an astronaut, except that you don't get oppressed by ranchers 
 or stuck on the launchpad in an adult diaper for 28 hours at a stretch. 
-The idea that I'd get dyspeptic over people---\emph{readers</em>---celebrating what I write is goddamned <em>bizarre}.
+The idea that I'd get dyspeptic over people---\emph{readers}---celebrating
+what I write is goddamned \emph{bizarre}.
 
 So, download this book.
 
@@ -83,29 +90,32 @@ Some rules of the road:
 It's kind of a tradition around here that my readers convert my ebooks 
 to their favorite formats and send them to me here, and it's one that I 
 love! If you've converted these files to another format, send them to me
- (doctorow@craphound.com, subject Makers Conversion) and I'll host them,
- but before you do, make sure you read the following:
+(\texttt{doctorow@craphound.com}, subject Makers Conversion)
+and I'll host them, but before you do, make sure you read the following:
 
-</p><li> Only one conversion per format, first come, first serve. That 
+\begin{itemize}
+\item Only one conversion per format, first come, first serve. That 
 means that if someone's already converted the file to a Femellhebber 
 3000 document, that's the one you're going to find here. I just don't 
 know enough about esoteric readers to adjudicate disputes about what the
- ideal format is for your favorite device.</li>
-<p>
-</p><li> Make sure include a link to the reader as well. When you send 
+ ideal format is for your favorite device.
+
+\item Make sure include a link to the reader as well. When you send 
 me an ebook file, make sure that you include a link to the website for 
-the reader technology as well so that I can include it below.</li>
-<p>
-</p><li> No cover art. The text of this book is freely copyable, the 
+the reader technology as well so that I can include it below.
+
+\item No cover art. The text of this book is freely copyable, the 
 cover, not so much. The rights to it are controlled by my publisher, so 
-don't include it with your file.</li>
-<p>
-</p><li> No DRM. The Creative Commons license prohibits sharing the file
+don't include it with your file.
+
+\item No DRM. The Creative Commons license prohibits sharing the file
  with ``DRM'' (sometimes called ``copy-protection'') on it, and that's fine 
 by me. Don't send me the book with DRM on it. If you're converting to a 
-format that has a DRM option, make sure it's switched off.</li>
+format that has a DRM option, make sure it's switched off.
 
-\chapter{A word to professors, librarians, and people who want to donate money to me}
+\end{itemize}
+
+\chapter[]{A word to professors, librarians, and people who want to donate money to me}
 
 Every time I put a book online for free, I get emails from readers who 
 want to send me donations for the book. I appreciate their generous 
@@ -114,7 +124,8 @@ are really important to me. They contribute immeasurably to the book,
 improving it, introducing it to audience I could never reach, helping me
  do more with my work. I have no desire to cut them out of the loop.
 
-But there has to be some good way to turn that generosity to good use, and I think I've found it.
+But there has to be some good way to turn that generosity to good use,
+and I think I've found it.
 
 Here's the deal: there are lots of professors and librarians who'd love 
 to get hard-copies of this book into their students' and patrons' hands,
@@ -139,45 +150,46 @@ first!) to freemakers@gmail.com so that Olga can mark that copy as sent.
 us know and we'll keep you anonymous, otherwise we'll thank you on the 
 donate page.
 
-Check http://craphound.com/makers/donate for profs, librarians and similar people seeking donations.
+Check \texttt{http://craphound.com/makers/donate} for profs, librarians
+and similar people seeking donations.
 
 \chapter{License}
 
 This file is licensed under a Creative Commons US Attribution-NonCommercial-ShareAlike license:
-
 \texttt{http://creativecommons.org/licenses/by-nc-sa/3.0/}
 
 You are free:
 
-	 to Share --- to copy, distribute and transmit the work
-
-	 to Remix --- to adapt the work
+\begin{itemize}
+\item to Share --- to copy, distribute and transmit the work
+\item to Remix --- to adapt the work
+\end{itemize}
 
 Under the following conditions:
 
-	 Attribution --- You must attribute the work in the manner specified by 
+\begin{itemize}
+\item Attribution --- You must attribute the work in the manner specified by 
 the author or licensor (but not in any way that suggests that they 
 endorse you or your use of the work).
-
-	 Noncommercial --- You may not use this work for commercial purposes.
-
-	 Share Alike --- If you alter, transform, or build upon this work, you 
+\item Noncommercial --- You may not use this work for commercial purposes.
+\item Share Alike --- If you alter, transform, or build upon this work, you 
 may distribute the resulting work only under the same or similar license
  to this one.
+\end{itemize}
 
 With the understanding that:
 
-	 Waiver --- Any of the above conditions can be waived if you get permission from the copyright holder.
+\begin{itemize}
+
+\item Waiver --- Any of the above conditions can be waived if you get permission from the copyright holder.
 	
-	 Other Rights --- In no way are any of the following rights affected by the license:
-	
-		 Your fair dealing or fair use rights;
-		
-		 The author's moral rights;
-		
-		 Rights other persons may have either in the work itself or in how the work is used, such as publicity or privacy rights.
-		
-		 Notice --- For any reuse or distribution, you must make clear to others the license terms of this work.
+\item Other Rights --- In no way are any of the following rights affected by the license: \\
+Your fair dealing or fair use rights; \\
+The author's moral rights; \\
+Rights other persons may have either in the work itself or in how the work is used, such as publicity or privacy rights.
+
+\item Notice --- For any reuse or distribution, you must make clear to others the license terms of this work.
+\end{itemize}
 
 \chapter{Dedication}
 
@@ -19423,6 +19435,7 @@ part is going to be convincing them to sell.''
 Guignol slid the seat back so it was flat as a bed. ``Wake me when we hit Orlando.''
 
 \hrule
+
 It took IT three days to get Sammy his computer back. His secretary 
 managed as best as she could, but he wasn't able to do much without it.
 
